--- a/index.html
+++ b/index.html
@@ -132,6 +132,19 @@
             transform: scale(1.05);
         }
 
+   @media (min-width: 769px) {
+            .label-container {
+                display: none;
+            }
+
+            td {
+                text-align: center;
+            }
+        }
+
+
+
+        
         /* Responsive Design */
         @media (max-width: 768px) {
             .container {
