--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <thead>
                 <tr>
                     <th>Plat Nomor</th>
-                    <th>Tanggal Perbaikan</th>
+                    <th>Form Perbaikan</th>
                     <th>Tanggal Selesai</th>
                     <th>Jenis Perbaikan</th>
                     <th>Status</th>
