--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                             <td>
                                 <div class="label-container">
                                     <i class="fas fa-calendar-alt"></i>
-                                    <span>Tanggal Perbaikan</span>
+                                    <span>Form Perbaikan</span>
                                 </div>
                                 ${tanggalPerbaikan}
                             </td>
